// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module: skipped export: mergeSkipped When previous state exists When skipped fields exist When skipped field exists in previous state Error field Should copy prev field state over 1`] = `
Object {
  "doneCallbacks": Array [],
  "errorCount": 1,
  "exclusive": Object {},
  "fieldCallbacks": Object {},
  "groups": Object {},
  "lagging": Array [],
  "name": "suite_1",
  "pending": Array [],
  "skippedGroups": Object {},
  "skippedTests": Object {
    "field_2": true,
  },
  "suiteId": "suiteId_1",
  "tests": Object {
    "field_2": Object {
      "errorCount": 1,
      "errors": Array [
        "error_string",
      ],
      "warnCount": 0,
      "warnings": Array [],
    },
  },
  "warnCount": 0,
}
`;

exports[`module: skipped export: mergeSkipped When previous state exists When skipped fields exist When skipped field exists in previous state Warning field Should copy prev field state over 1`] = `
Object {
  "doneCallbacks": Array [],
  "errorCount": 0,
  "exclusive": Object {},
  "fieldCallbacks": Object {},
  "groups": Object {},
  "lagging": Array [],
  "name": "suite_1",
  "pending": Array [],
  "skippedGroups": Object {},
  "skippedTests": Object {
    "field_1": true,
  },
  "suiteId": "suiteId_1",
  "tests": Object {
    "field_1": Object {
      "errorCount": 0,
      "errors": Array [],
      "warnCount": 1,
      "warnings": Array [
        "warning_string",
      ],
    },
  },
  "warnCount": 1,
}
`;

exports[`module: skipped export: setSkippedGroup When group is not yet skipped Should marke group as skipped 1`] = `
Object {
  "doneCallbacks": Array [],
  "errorCount": 0,
  "exclusive": Object {},
  "fieldCallbacks": Object {},
  "groups": Object {},
  "lagging": Array [],
  "name": "suite_1",
  "pending": Array [],
  "skippedGroups": Object {
    "group_1": true,
  },
  "skippedTests": Object {},
  "suiteId": "suiteId_1",
  "tests": Object {},
  "warnCount": 0,
}
`;

exports[`module: skipped export: setSkippedTest When field is not yet skipped Should marke field as skipped 1`] = `
Object {
  "doneCallbacks": Array [],
  "errorCount": 0,
  "exclusive": Object {},
  "fieldCallbacks": Object {},
  "groups": Object {},
  "lagging": Array [],
  "name": "suite_1",
  "pending": Array [],
  "skippedGroups": Object {},
  "skippedTests": Object {
    "field_1": true,
  },
  "suiteId": "suiteId_1",
  "tests": Object {},
  "warnCount": 0,
}
`;
